Cannot just move Player and Camera due to cwd issues, need to see how to split it